# DRF_online_training

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  payment_data.json  pyproject.toml
DRF_online_training/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
online_training/: admin.py  models.py  paginators.py  permissions.py  services.py  tasks.py  tests.py  urls.py  validators.py
online_training/migrations/: 0001_initial.py  0002_initial.py  0003_payments.py  0004_alter_payments_payment_method.py  0005_subscription.py  0006_course_price.py  0007_alter_course_price.py  0008_payments_is_paid_payments_session_id.py  0009_alter_payments_date_payment.py  0010_alter_payments_payment_amount.py  0011_alter_course_price.py  0012_alter_course_price.py
online_training/serializers/: course.py  lesson.py  payments.py  subscription.py
online_training/views/: course.py  lesson.py  payments.py  subscription.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: ccsu.py
users/migrations/: 0001_initial.py  0002_remove_user_is_activated.py
